--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <span>400-8008-8008</span>
     </nav>
     <!--响应式菜单-->
-    <div class="responsiveNav">
+    <div class="responsiveNav" id="responsiveNav">
       <span class="line-1"></span>
       <span class="line-2"></span>
       <span class="line-3"></span>
