--- a/place.html
+++ b/place.html
@@ -27,6 +27,24 @@
         <a href="photo.html">照片墙</a>
         <span>400-8008-8008</span>
       </nav>
+      <!--响应式菜单-->
+      <!--<div class="responsiveNav" id="responsiveNav">
+        <span class="line-1"></span>
+        <span class="line-2"></span>
+        <span class="line-3"></span>
+      </div>
+      <div class="responsiveNav-list">
+        <ul>
+          <li><a href="index.html" class="active">首页</a></li>
+          <li><a href="place.html">所有场地</a></li>
+          <li><a href="food.html">餐饮</a></li>
+          <li><a href="photo.html">照片墙</a></li>
+          <li><a href="about.html">关于我们</a></li>
+          <li>400-8008-8008</li>
+          <li><img src="img/wechat.jpg" alt="客服二维码"></li>
+          <li>微信客服：lanpaish</li>
+        </ul>
+      </div>-->
     </header>
     <aside class="slogan">
       <img src="img/place-header-slogan.png" class="sloganPic" alt="123">
