--- a/place.html
+++ b/place.html
@@ -73,134 +73,9 @@
     <div class="scrolldown">滑动更多内容</div>
   </div>
   <!--主要内容-->
-  <div class="container">
-    <!--分类-->
-    <section class="typeList clearfix">
-      <div class="typeList-title flyLeftAnimate">
-        <h2>异域风情</h2>
-        <span><i></i><i></i><i></i></span>
-      </div>
-      <div class="colList clearfix flyRightAnimate">
-        <div class="product left">
-          <div class="productPic">
-            <img src="img/place-list/place-list-1.jpg" alt="123">
-          </div>
-          <div class="product-content-bg">
-            <div class="product-content">
-              <h3>夏威夷别墅轰趴馆</h3>
-              <p class="introduce">本别墅适合做：Team Building、私人派对、同学聚会、开学/毕业聚会、好友聚会、公司聚会、草坪婚礼、公司尾牙、草坪酒会、行业交流、高端派对、商务宴请、（微）电影拍摄、节日派对、主题派对、动漫Cosplay、求婚求爱、会议会晤、社团活动、旅游度假、音乐酒会、拓展/破冰游戏等。</p>
-              <span class="productStrip"></span>
-            </div>
-          </div>
-          <div class="detailBtn productBtn">VIEW</div>
-        </div>
-        <div class="product left">
-          <div class="productPic">
-            <img src="img/place-list/place-list-1.jpg" alt="123">
-          </div>
-          <div class="product-content-bg">
-            <div class="product-content">
-              <h3>夏威夷别墅轰趴馆</h3>
-              <p class="introduce">本别墅适合做：Team Building、私人派对、同学聚会、开学/毕业聚会、好友聚会、公司聚会、草坪婚礼、公司尾牙、草坪酒会、行业交流、高端派对、商务宴请、（微）电影拍摄、节日派对、主题派对、动漫Cosplay、求婚求爱、会议会晤、社团活动、旅游度假、音乐酒会、拓展/破冰游戏等。</p>
-              <span class="productStrip"></span>
-            </div>
-          </div>
-          <div class="detailBtn productBtn">VIEW</div>
-        </div>
-      </div>
-      <div class="colList clearfix flyRightAnimate">
-        <div class="product left">
-          <div class="productPic">
-            <img src="img/place-list/place-list-1.jpg" alt="123">
-          </div>
-          <div class="product-content-bg">
-            <div class="product-content">
-              <h3>夏威夷别墅轰趴馆</h3>
-              <p class="introduce">本别墅适合做：Team Building、私人派对、同学聚会、开学/毕业聚会、好友聚会、公司聚会、草坪婚礼、公司尾牙、草坪酒会、行业交流、高端派对、商务宴请、（微）电影拍摄、节日派对、主题派对、动漫Cosplay、求婚求爱、会议会晤、社团活动、旅游度假、音乐酒会、拓展/破冰游戏等。</p>
-              <span class="productStrip"></span>
-            </div>
-          </div>
-          <div class="detailBtn productBtn">VIEW</div>
-        </div>
-        <div class="product left">
-          <div class="productPic">
-            <img src="img/place-list/place-list-1.jpg" alt="123">
-          </div>
-          <div class="product-content-bg">
-            <div class="product-content">
-              <h3>夏威夷别墅轰趴馆</h3>
-              <p class="introduce">本别墅适合做：Team Building、私人派对、同学聚会、开学/毕业聚会、好友聚会、公司聚会、草坪婚礼、公司尾牙、草坪酒会、行业交流、高端派对、商务宴请、（微）电影拍摄、节日派对、主题派对、动漫Cosplay、求婚求爱、会议会晤、社团活动、旅游度假、音乐酒会、拓展/破冰游戏等。</p>
-              <span class="productStrip"></span>
-            </div>
-          </div>
-          <div class="detailBtn productBtn">VIEW</div>
-        </div>
-      </div>
-    </section>
-    <!--分类-->
-    <section class="typeList clearfix">
-      <div class="typeList-title flyLeftAnimate">
-        <h2>异域风情</h2>
-        <span><i></i><i></i><i></i></span>
-      </div>
-      <div class="colList clearfix flyRightAnimate">
-        <div class="product left">
-          <div class="productPic">
-            <img src="img/place-list/place-list-1.jpg" alt="123">
-          </div>
-          <div class="product-content-bg">
-            <div class="product-content">
-              <h3>夏威夷别墅轰趴馆</h3>
-              <p class="introduce">本别墅适合做：Team Building、私人派对、同学聚会、开学/毕业聚会、好友聚会、公司聚会、草坪婚礼、公司尾牙、草坪酒会、行业交流、高端派对、商务宴请、（微）电影拍摄、节日派对、主题派对、动漫Cosplay、求婚求爱、会议会晤、社团活动、旅游度假、音乐酒会、拓展/破冰游戏等。</p>
-              <span class="productStrip"></span>
-            </div>
-          </div>
-          <div class="detailBtn productBtn">VIEW</div>
-        </div>
-        <div class="product left">
-          <div class="productPic">
-            <img src="img/place-list/place-list-1.jpg" alt="123">
-          </div>
-          <div class="product-content-bg">
-            <div class="product-content">
-              <h3>夏威夷别墅轰趴馆</h3>
-              <p class="introduce">本别墅适合做：Team Building、私人派对、同学聚会、开学/毕业聚会、好友聚会、公司聚会、草坪婚礼、公司尾牙、草坪酒会、行业交流、高端派对、商务宴请、（微）电影拍摄、节日派对、主题派对、动漫Cosplay、求婚求爱、会议会晤、社团活动、旅游度假、音乐酒会、拓展/破冰游戏等。</p>
-              <span class="productStrip"></span>
-            </div>
-          </div>
-          <div class="detailBtn productBtn">VIEW</div>
-        </div>
-      </div>
-      <div class="colList clearfix flyRightAnimate">
-        <div class="product left">
-          <div class="productPic">
-            <img src="img/place-list/place-list-1.jpg" alt="123">
-          </div>
-          <div class="product-content-bg">
-            <div class="product-content">
-              <h3>夏威夷别墅轰趴馆</h3>
-              <p class="introduce">本别墅适合做：Team Building、私人派对、同学聚会、开学/毕业聚会、好友聚会、公司聚会、草坪婚礼、公司尾牙、草坪酒会、行业交流、高端派对、商务宴请、（微）电影拍摄、节日派对、主题派对、动漫Cosplay、求婚求爱、会议会晤、社团活动、旅游度假、音乐酒会、拓展/破冰游戏等。</p>
-              <span class="productStrip"></span>
-            </div>
-          </div>
-          <div class="detailBtn productBtn">VIEW</div>
-        </div>
-        <div class="product left">
-          <div class="productPic">
-            <img src="img/place-list/place-list-1.jpg" alt="123">
-          </div>
-          <div class="product-content-bg">
-            <div class="product-content">
-              <h3>夏威夷别墅轰趴馆</h3>
-              <p class="introduce">本别墅适合做：Team Building、私人派对、同学聚会、开学/毕业聚会、好友聚会、公司聚会、草坪婚礼、公司尾牙、草坪酒会、行业交流、高端派对、商务宴请、（微）电影拍摄、节日派对、主题派对、动漫Cosplay、求婚求爱、会议会晤、社团活动、旅游度假、音乐酒会、拓展/破冰游戏等。</p>
-              <span class="productStrip"></span>
-            </div>
-          </div>
-          <div class="detailBtn productBtn">VIEW</div>
-        </div>
-      </div>
-    </section>
-    <div class="seeMore">查看更多</div>
+  <div class="container" id="placeList">
+
+    <!--<div class="seeMore">查看更多</div>-->
   </div>
   <!--弹出详情-->
   <div class="detailCover">
@@ -265,7 +140,7 @@
     <li class="backtop"><a href="#top">TOP</a></li>
   </ul>
   <div class="erweima">
-    <img src="img/wechat.png" alt="123">
+    <img src="img/wechat.jpg" alt="123">
   </div>
 
   <script src="js/jquery-2.0.0.min.js"></script>
