--- a/test.html
+++ b/test.html
@@ -3,30 +3,74 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
-  <link rel="stylesheet" type="text/css" href="css/normalize.css">
-  <link rel="stylesheet" type="text/css" href="css/index.css">
+  <title>html 暂存</title>
 
 </head>
 
 <body>
-  <div class="testcover">
-    <div class="content">
-      <ul class="picSlideBig">
-        <li><img src="img/photos/photo-details-1.jpg" alt="123"></li>
-        <li><img src="img/photos/photo-details-2.jpg" alt="123"></li>
-        <li><img src="img/photos/photo-details-3.jpg" alt="123"></li>
-        <li><img src="img/photos/photo-details-4.jpg" alt="123"></li>
-        <li><img src="img/photos/photo-details-5.jpg" alt="123"></li>
-        <li><img src="img/photos/photo-details-6.jpg" alt="123"></li>
-        <li><img src="img/photos/photo-details-7.jpg" alt="123"></li>
-        <li><img src="img/photos/photo-details-8.jpg" alt="123"></li>
-      </ul>
-      <div class="picSlideSmallBox"><span class="curNum"></span>/<span class="totalNum"></span></div>
-      <span class="picSlideBtn prev" id="picSlideBtnPrev"></span>
-      <span class="picSlideBtn next" id="picSlideBtnNext"></span>
+  <!--场馆拉取-->
+  <section class="typeList clearfix">
+    <div class="typeList-title flyLeftAnimate">
+      <h2>异域风情</h2>
+      <span><i></i><i></i><i></i></span>
     </div>
-  </div>
+    <div class="colList clearfix flyRightAnimate">
+      <div class="product left">
+        <div class="productPic">
+          <img src="img/place-list/place-list-1.jpg" alt="123">
+        </div>
+        <div class="product-content-bg">
+          <div class="product-content">
+            <h3>夏威夷别墅轰趴馆</h3>
+            <p class="introduce">本别墅适合做：Team Building、私人派对、同学聚会、开学/毕业聚会、好友聚会、公司聚会、草坪婚礼、公司尾牙、草坪酒会、行业交流、高端派对、商务宴请、（微）电影拍摄、节日派对、主题派对、动漫Cosplay、求婚求爱、会议会晤、社团活动、旅游度假、音乐酒会、拓展/破冰游戏等。</p>
+            <span class="productStrip"></span>
+          </div>
+        </div>
+        <div class="detailBtn productBtn">VIEW</div>
+      </div>
+      <div class="product left">
+        <div class="productPic">
+          <img src="img/place-list/place-list-1.jpg" alt="123">
+        </div>
+        <div class="product-content-bg">
+          <div class="product-content">
+            <h3>夏威夷别墅轰趴馆</h3>
+            <p class="introduce">本别墅适合做：Team Building、私人派对、同学聚会、开学/毕业聚会、好友聚会、公司聚会、草坪婚礼、公司尾牙、草坪酒会、行业交流、高端派对、商务宴请、（微）电影拍摄、节日派对、主题派对、动漫Cosplay、求婚求爱、会议会晤、社团活动、旅游度假、音乐酒会、拓展/破冰游戏等。</p>
+            <span class="productStrip"></span>
+          </div>
+        </div>
+        <div class="detailBtn productBtn">VIEW</div>
+      </div>
+    </div>
+    <div class="colList clearfix flyRightAnimate">
+      <div class="product left">
+        <div class="productPic">
+          <img src="img/place-list/place-list-1.jpg" alt="123">
+        </div>
+        <div class="product-content-bg">
+          <div class="product-content">
+            <h3>夏威夷别墅轰趴馆</h3>
+            <p class="introduce">本别墅适合做：Team Building、私人派对、同学聚会、开学/毕业聚会、好友聚会、公司聚会、草坪婚礼、公司尾牙、草坪酒会、行业交流、高端派对、商务宴请、（微）电影拍摄、节日派对、主题派对、动漫Cosplay、求婚求爱、会议会晤、社团活动、旅游度假、音乐酒会、拓展/破冰游戏等。</p>
+            <span class="productStrip"></span>
+          </div>
+        </div>
+        <div class="detailBtn productBtn">VIEW</div>
+      </div>
+      <div class="product left">
+        <div class="productPic">
+          <img src="img/place-list/place-list-1.jpg" alt="123">
+        </div>
+        <div class="product-content-bg">
+          <div class="product-content">
+            <h3>夏威夷别墅轰趴馆</h3>
+            <p class="introduce">本别墅适合做：Team Building、私人派对、同学聚会、开学/毕业聚会、好友聚会、公司聚会、草坪婚礼、公司尾牙、草坪酒会、行业交流、高端派对、商务宴请、（微）电影拍摄、节日派对、主题派对、动漫Cosplay、求婚求爱、会议会晤、社团活动、旅游度假、音乐酒会、拓展/破冰游戏等。</p>
+            <span class="productStrip"></span>
+          </div>
+        </div>
+        <div class="detailBtn productBtn">VIEW</div>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
