--- a/photo.html
+++ b/photo.html
@@ -68,19 +68,38 @@
         </li>
       </ul>
     </div>
-    <input type="button" value="更多精彩瞬间" class="changeList seeMore" >
+    <input type="button" value="更多精彩瞬间" class="changeList seeMore">
   </div>
 
   <!--头部-->
   <header>
     <a href="index.html"><img src="img/logo.png" alt="蓝派别墅轰趴馆" class="logo"></a>
-    <nav>
-      <a href="index.html">首页</a>
+    <!--默认菜单-->
+    <nav class="defaultView">
+      <a href="index.html" class="active">首页</a>
       <a href="place.html">所有场地</a>
       <a href="food.html">餐饮</a>
-      <a href="photo.html" class="active">照片墙</a>
+      <a href="photo.html">照片墙</a>
       <span>400-8008-8008</span>
     </nav>
+    <!--响应式菜单-->
+    <div class="responsiveNav" id="responsiveNav">
+      <span class="line-1"></span>
+      <span class="line-2"></span>
+      <span class="line-3"></span>
+    </div>
+    <div class="responsiveNav-list">
+      <ul>
+        <li><a href="index.html" class="active">首页</a></li>
+        <li><a href="place.html">所有场地</a></li>
+        <li><a href="food.html">餐饮</a></li>
+        <li><a href="photo.html">照片墙</a></li>
+        <li><a href="about.html">关于我们</a></li>
+        <li>400-8008-8008</li>
+        <li><img src="img/wechat.jpg" alt="客服二维码"></li>
+        <li>微信客服：lanpaish</li>
+      </ul>
+    </div>
   </header>
   <!--底部-->
   <footer>
