--- a/place.html
+++ b/place.html
@@ -20,7 +20,8 @@
   <div class="topBox placeTop">
     <header>
       <a href="index.html"><img src="img/logo.png" alt="蓝派别墅轰趴馆" class="logo"></a>
-      <nav>
+      <!--默认菜单-->
+      <nav class="defaultView">
         <a href="index.html">首页</a>
         <a href="place.html" class="active">所有场地</a>
         <a href="food.html">餐饮</a>
@@ -28,15 +29,15 @@
         <span>400-8008-8008</span>
       </nav>
       <!--响应式菜单-->
-      <!--<div class="responsiveNav" id="responsiveNav">
+      <div class="responsiveNav" id="responsiveNav">
         <span class="line-1"></span>
         <span class="line-2"></span>
         <span class="line-3"></span>
       </div>
       <div class="responsiveNav-list">
         <ul>
-          <li><a href="index.html" class="active">首页</a></li>
-          <li><a href="place.html">所有场地</a></li>
+          <li><a href="index.html">首页</a></li>
+          <li><a href="place.html" class="active">所有场地</a></li>
           <li><a href="food.html">餐饮</a></li>
           <li><a href="photo.html">照片墙</a></li>
           <li><a href="about.html">关于我们</a></li>
@@ -44,7 +45,7 @@
           <li><img src="img/wechat.jpg" alt="客服二维码"></li>
           <li>微信客服：lanpaish</li>
         </ul>
-      </div>-->
+      </div>
     </header>
     <aside class="slogan">
       <img src="img/place-header-slogan.png" class="sloganPic" alt="123">
@@ -74,7 +75,6 @@
   </div>
   <!--主要内容-->
   <div class="container" id="placeList">
-
     <!--<div class="seeMore">查看更多</div>-->
   </div>
   <!--弹出详情-->
